app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kargo-demo-app
  name: kargo-demo-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kargo-demo-app
